2011-02-11  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed issue #17552: htmlArea RTE: Delete deprecated class HTMLArea.Dialog
	* Fixed issue #17554: htmlArea RTE: Delete deprecated DAM integration extension variable
	* Fixed issue #17555: htmlArea RTE: Delete deprecated Aspell-related extension configuration variables
	* Fixed issue #17557: htmlArea RTE: Delete deprecated Page TSConfig properties

2011-02-11  Christian Kuhn  <lolli@schwarzbu.ch>

	* Fixed bug #17553: css_styled_content ext_tables.php links to wrong static file for TYPO3 4.4
	* Fixed bug #16534: Exception message for missing memcache wrong
	* Fixed bug #15721: Memcache::delete() without timeout param causes loss of memcache server in pool (Thanks to Michiel Ross)
	* Follow-up to #16591: Make getClassName() non recursive (Thanks to Pierre Dudoret)

2011-02-10  Christian Kuhn  <lolli@schwarzbu.ch>

	* Follow-up to #12230: Add unit test to test tslib_cObj::crop() for multibyte compatibility
	* Fixed bug #12230: Function tslib_cObj::crop() is not fully multibyte safe (Thanks to Vladimir Podkovanov)

2011-02-09  Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17501: User setup - pressing return creates installtool file
	* Raised CodeMirror to version 0.9.3

2011-02-08  Steffen Kamper  <steffen@typo3.org>

	* Merged em from rev 4093
	* Fixed bug #15771: Docheader (save, save+view, save+close etc) missing
	* Follow-up to #17500: Improve error handling in ExtDirect router (Thanks to Helmut Hummel)

2011-02-08  Jigal van Hemert  <jigal@xs4all.nl>

	* Fixed bug #17507: Extension using stdWrap hooks are broken due to stdWrap refactoring (Thank also to Jo Hasenau)

2011-02-07  Stanislas Rolland  <typo3@sjbr.ca>

	* htmlArea RTE: Updated Manual

2011-02-07 Steffen Kamper  <steffen@typo3.org>

	* Fixed bug #17502: ExtDirect Exception: "Error parsing json response: null"
	* Fixed bug #17500: Improve error handling in ExtDirect router (Thanks to Helmut Hummel)

2011-02-07  Ernesto Baschny  <ernst@cron-it.de>
